2010-04-30  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-09-00
	* runs with CMSSW_3_6_0 (on 35X files)
	* eliminate (mostly) references to sisCone
	* repair JPT reconstruction which has changed significantly
	(configuration-wise) in 36X

2010-04-26  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-09
	* pick up fix by Andreas (see below)

2010-04-20  Andreas Hinzmann  <hinzmann@cern.ch>

	* fix in jet_l3_correction_x

2010-04-19  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-08
	* improvements to jet_l2_correction_x and jet_l3_correction_x
	tools

2010-04-12  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-07
	* don't try to read branch refy (it does not exist)

	* tag V00-08-06
	* jet_response_analyzer: integrate rapidity (y) binning

2010-04-09  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-05
	* improve etarsp and phirsp definitions (Andreas)
	* fixes to track reconstruction sequence (Andreas)
	* fix jet_apply_jec_x tool to work (well, compile) with
	CondFormats/JetMETObjects V02-00-05-03. Still not in default build
	sequence

2010-04-05  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-04
	* fix JPT reconstruction sequence
	* set jet_response_analyzer_x option 'nbinsabsrsp' to 0, which
	means that by default absolute response histograms will not be
	created

2010-04-01  Andreas Hinzmann  <hinzmann@cern.ch>

	* add trackjet reconstruction sequence
	* adapt L2 and L3 correctors for trackjets

2010-03-31  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-03
	* fix jet_l2_correction_x tool (finally!), according to Kostas'
	instructions (thanks to Andreas for pointing out that it was still
	wrong). 

	* tag V00-08-02
	* add tree branch 'refrank'
	* add tree branch 'refy' (reference rapidity)
	* add tree branch 'jty' (jet rapidity)
	* yet to be accounted for in e.g. jet_response_analyzer_x tool!
	